--- a/src/app/components/basic-lang/basic-lang.component.html
+++ b/src/app/components/basic-lang/basic-lang.component.html
@@ -32,7 +32,7 @@
         <span><img src="../../../assets/img/Tech Stack Icons/go.png" alt="" width="100px" height="100px"></span>
       </div>
       <div class="slide">
-        <span><img src="../../../assets/img/Tech Stack Icons/c++.png" alt="" width="100px" height="100px"></span>
+        <span><img src="../../../assets/img/Tech Stack Icons/bootstrap5.png" alt="" width="100px" height="100px"></span>
       </div>
 
       <div class="slide">
@@ -66,7 +66,7 @@
         <span><img src="../../../assets/img/Tech Stack Icons/go.png" alt="" width="100px" height="100px"></span>
       </div>
       <div class="slide">
-        <span><img src="../../../assets/img/Tech Stack Icons/c++.png" alt="" width="100px" height="100px"></span>
+        <span><img src="../../../assets/img/Tech Stack Icons/bootstrap5.png" alt="" width="100px" height="100px"></span>
       </div>
     </div>
   </div>
