--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,16 @@
 <!-- <app-navbar></app-navbar> -->
-<!-- <mat-slide-toggle>Toggle me!</mat-slide-toggle> -->
-<div class="container mt-3">
-  <app-home></app-home>
-  <app-skill></app-skill>
-  <app-basic-lang></app-basic-lang>
-  <app-experience></app-experience>
-  <app-list-project></app-list-project>
-  <app-keluhan></app-keluhan>
+<div class="body">
+  <div class="home">
+    <app-home></app-home>
+  </div>
+  <div class="body">
+    <app-skill></app-skill>
+    <app-basic-lang></app-basic-lang>
+    <app-experience></app-experience>
+    <app-list-project></app-list-project>
+  </div>
+  <div class="footer">
+    <app-keluhan></app-keluhan>
+  </div>
 </div>
+
