--- a/src/app/components/experience/experience.component.html
+++ b/src/app/components/experience/experience.component.html
@@ -1,235 +1,245 @@
-<mat-tab-group mat-stretch-tabs="false" mat-align-tabs="start">
-  <mat-tab label="Pengalaman Kerja">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12">
-          <div class="page-header">
-            <h1 class="text-center"></h1>
-          </div>
-          <div style="display: inline-block; width: 100%; overflow-y: auto">
-            <ul class="timeline timeline-horizontal">
-              <li class="timeline-item">
-                <div class="timeline-badge">
-                  <i class="bi bi-person-workspace"></i>
+<div class="container">
+  <mat-tab-group mat-stretch-tabs="false" mat-align-tabs="start">
+    <mat-tab label="Pengalaman Kerja">
+      <div class="container">
+        <div class="col p-0 overflow-auto border-end">
+          <div class="p-3">
+            <div class="row">
+              <div class="col-auto text-center flex-column d-none d-lg-flex">
+                <div class="row h-50">
+                  <div class="col">&nbsp;</div>
+                  <div class="col">&nbsp;</div>
                 </div>
-                <div class="timeline-panel">
-                  <div class="timeline-heading">
-                    <h4 class="timeline-title">
+                <h5 class="m-2">
+                  <i class="bi bi-building"></i>
+                </h5>
+                <div class="row h-50">
+                  <div class="col border-end">&nbsp;</div>
+                  <div class="col">&nbsp;</div>
+                </div>
+              </div>
+              <div class="col py-2">
+                <div class="card">
+                  <div class="card-body">
+                    <div class="float-end">Oktober 2023 - Sekarang</div>
+                    <h4 class="card-title">
                       Direktorat Pusat Teknologi Informasi Telkomuniversity
                     </h4>
-                    <h5 class="timeline-subtitle">Quality Assurance</h5>
-                    <p>
-                      <small class="text-muted"
-                        ><i class="glyphicon glyphicon-time"></i> Oktober 2023 -
-                        Sekarang</small
-                      >
-                    </p>
-                  </div>
-                  <div class="timeline-body">
-                    <ul>
-                      <li>
-                        Melakukan pengujian komprehensif terhadap aplikasi web
-                        untuk mengidentifikasi dan mendokumentasikan error, bug,
-                        dan masalah pada website.
-                      </li>
-                      <li>Melakukan pengujian API dengan postman.</li>
-                      <li>
-                        Memberikan saran dan rekomendasi perbaikan error atau
-                        bug.
-                      </li>
-                      <li>
-                        Membuat rencana pengujian, strategi, dan kasus pengujian
-                        berdasarkan persyaratan proyek.
-                      </li>
-                      <li>
-                        Melaporkan dan melacak masalah yang teridentifikasi yang
-                        mengandung bug, dan mendiskusikannya dengan tim
-                        developer untuk menyelesaikannya.
-                      </li>
-                    </ul>
+                    <h5 class="card-subtitle">Quality Assurance</h5>
+                    <div class="card-text">
+                      <ul>
+                        <li>
+                          Melakukan pengujian komprehensif terhadap aplikasi web
+                          untuk mengidentifikasi dan mendokumentasikan error,
+                          bug, dan masalah pada website.
+                        </li>
+                        <li>Melakukan pengujian API dengan postman.</li>
+                        <li>
+                          Memberikan saran dan rekomendasi perbaikan error atau
+                          bug.
+                        </li>
+                        <li>
+                          Membuat rencana pengujian, strategi, dan kasus
+                          pengujian berdasarkan persyaratan proyek.
+                        </li>
+                        <li>
+                          Melaporkan dan melacak masalah yang teridentifikasi
+                          yang mengandung bug, dan mendiskusikannya dengan tim
+                          developer untuk menyelesaikannya.
+                        </li>
+                      </ul>
+                    </div>
                   </div>
                 </div>
-              </li>
-              <li class="timeline-item">
-                <div class="timeline-badge">
-                  <i class="bi bi-person-workspace"></i>
-                </div>
-                <div class="timeline-panel">
-                  <div class="timeline-heading">
-                    <h4 class="timeline-title">
-                      Direktorat Pusat Teknologi Informasi Telkomuniversity
-                    </h4>
-                    <h5 class="timeline-subtitle">Front End Web Developer</h5>
-                    <p>
-                      <small class="text-muted"
-                        ><i class="glyphicon glyphicon-time"></i> Oktober 2022 -
-                        Oktober 2023</small
-                      >
-                    </p>
-                  </div>
-                  <div class="timeline-body">
-                    <ul>
-                      <li>
-                        Menerapkan antarmuka pengguna dan elemen interaktif
-                        menggunakan HTML, CSS, dan TypeScript untuk membuat
-                        situs web yang responsif dan menarik.
-                      </li>
-                      <li>
-                        Mengidentifikasi dan menyelesaikan error dan bug dalam
-                        kode front-end.
-                      </li>
-                      <li>
-                        Bekerja sama dengan pengembang back-end untuk memastikan
-                        integrasi API antara komponen front-end dan back-end.
-                      </li>
-                      <li>
-                        Memberikan panduan kepada peserta magang untuk
-                        memastikan keberhasilan penyelesaian tugas mereka.
-                      </li>
-                    </ul>
-                  </div>
-                </div>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </div>
-  </mat-tab>
-  <mat-tab label="Pengalaman Organisasi">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12">
-          <div class="page-header">
-            <h1 class="text-center"></h1>
-          </div>
-          <div style="display: inline-block; width: 100%; overflow-y: auto">
-            <ul class="timeline timeline-horizontal">
-              <li class="timeline-item">
-                <div class="timeline-badge">
-                  <i class="bi bi-person-workspace"></i>
-                </div>
-                <div class="timeline-panel">
-                  <div class="timeline-heading">
-                    <h4 class="timeline-title">
-                      Chevalier Lab Telkomuniversity
-                    </h4>
-                    <h5 class="timeline-subtitle">Anggota Divisi Web</h5>
-                    <p>
-                      <small class="text-muted"
-                        ><i class="glyphicon glyphicon-time"></i> Desember 2021
-                        - September 2022</small
-                      >
-                    </p>
-                  </div>
-                  <div class="timeline-body">
-                    <ul>
-                      Berpartisipasi aktif dalam kelompok belajar yang
-                      didedikasikan untuk eksplorasi dan pembelajaran mendalam
-                      di bidang pengembangan web, serta berbagi pengetahuan dan
-                      meningkatkan keterampilan di antara para anggotanya.
-                    </ul>
-                  </div>
-                </div>
-              </li>
-              <li class="timeline-item">
-                <div class="timeline-badge">
-                  <i class="bi bi-person-workspace"></i>
-                </div>
-                <div class="timeline-panel">
-                  <div class="timeline-heading">
-                    <h4 class="timeline-title">
-                      Informatics Lab Telkomuniversity
-                    </h4>
-                    <h5 class="timeline-subtitle">Asisten Praktikum</h5>
-                    <p>
-                      <small class="text-muted"
-                        ><i class="glyphicon glyphicon-time"></i> Desember 2021
-                        - September 2022</small
-                      >
-                    </p>
-                  </div>
-                  <div class="timeline-body">
-                    <ul>
-                      <li>
-                        Memberikan materi teori dan pelatihan praktikum untuk
-                        memastikan peserta praktikum memiliki pemahaman yang
-                        mendalam dan penerapan langsung dari konsep yang
-                        diajarkan.
-                      </li>
-                      <li>
-                        Membantu peserta praktikum dalam menyelesaikan soal-soal
-                        latihan dengan memberikan saran dan bimbingan.
-                      </li>
-                      <li>
-                        Memeriksa dan mengoreksi hasil pengerjaan soal-soal
-                        latihan peserta praktikum.
-                      </li>
-                    </ul>
-                  </div>
-                </div>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </div>
-  </mat-tab>
-  <mat-tab label="Pendidikan">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12">
-          <div class="page-header">
-            <h1 class="text-center"></h1>
-          </div>
-          <div style="display: inline-block; width: 100%; overflow-y: auto">
-            <ul class="timeline timeline-horizontal">
-              <li class="timeline-item">
-                <div class="timeline-badge">
-                  <i class="bi bi-person-workspace"></i>
-                </div>
-                <div class="timeline-panel">
-                  <div class="timeline-heading">
-                    <h4 class="timeline-title">Universitas Telkom</h4>
-                    <h5 class="timeline-subtitle">S1 Teknologi Informasi</h5>
-                    <p>
-                      <small class="text-muted"
-                        ><i class="glyphicon glyphicon-time"></i> Agustus 2020 -
-                        Februari 2024</small
-                      >
-                    </p>
-                  </div>
-                  <div class="timeline-body">
-                    <ul></ul>
-                  </div>
-                </div>
-              </li>
-              <!-- <li class="timeline-item">
-                <div class="timeline-badge">
-                  <i class="bi bi-person-workspace"></i>
-                </div>
-                <div class="timeline-panel">
-                  <div class="timeline-heading">
-                    <h4 class="timeline-title">LBBP LIA</h4>
-                    <h5 class="timeline-subtitle">Intermediate Level</h5>
-                    <p>
-                      <small class="text-muted"
-                        ><i class="glyphicon glyphicon-time"></i> Januari 2018 -
-                        Januari 2019</small
-                      >
-                    </p>
-                  </div>
-                  <div class="timeline-body">
-                    <ul>
+              </div>
+            </div>
 
-                    </ul>
+            <div class="row">
+              <div class="col-auto text-center flex-column d-none d-lg-flex">
+                <div class="row h-50">
+                  <div class="col border-end">&nbsp;</div>
+                  <div class="col">&nbsp;</div>
+                </div>
+                <h5 class="m-2">
+                  <i class="bi bi-building"></i>
+                </h5>
+              </div>
+              <div class="col py-2">
+                <div class="card">
+                  <div class="card-body">
+                    <div class="float-end">Oktober 2022 - Oktober 2023</div>
+                    <h4 class="card-title">
+                      Direktorat Pusat Teknologi Informasi Telkomuniversity
+                    </h4>
+                    <h5 class="card-subtitle">Front End Web Developer</h5>
+                    <div class="card-text">
+                      <ul>
+                        <li>
+                          Menerapkan antarmuka pengguna dan elemen interaktif
+                          menggunakan HTML, CSS, dan TypeScript untuk membuat
+                          situs web yang responsif dan menarik.
+                        </li>
+                        <li>
+                          Mengidentifikasi dan menyelesaikan error dan bug dalam
+                          kode front-end.
+                        </li>
+                        <li>
+                          Bekerja sama dengan pengembang back-end untuk
+                          memastikan integrasi API antara komponen front-end dan
+                          back-end.
+                        </li>
+                        <li>
+                          Memberikan panduan kepada peserta magang untuk
+                          memastikan keberhasilan penyelesaian tugas mereka.
+                        </li>
+                      </ul>
+                    </div>
                   </div>
                 </div>
-              </li> -->
-            </ul>
+              </div>
+            </div>
           </div>
         </div>
       </div>
-    </div>
-  </mat-tab>
-</mat-tab-group>
+    </mat-tab>
+    <mat-tab label="Pengalaman Organisasi">
+      <div class="container">
+        <div class="col p-0 overflow-auto border-end">
+          <div class="p-3">
+            <div class="row">
+              <div class="col-auto text-center flex-column d-none d-lg-flex">
+                <div class="row h-50">
+                  <div class="col">&nbsp;</div>
+                  <div class="col">&nbsp;</div>
+                </div>
+                <h5 class="m-2">
+                  <i class="bi bi-people-fill"></i>
+                </h5>
+                <div class="row h-50">
+                  <div class="col border-end">&nbsp;</div>
+                  <div class="col">&nbsp;</div>
+                </div>
+              </div>
+              <div class="col py-2">
+                <div class="card">
+                  <div class="card-body">
+                    <div class="float-end">Desember 2021 - September 2022</div>
+                    <h4 class="card-title">Chevalier Lab Telkomuniversity</h4>
+                    <h5 class="card-subtitle">Anggota Divisi Web</h5>
+                    <div class="card-text">
+                      <ul>
+                        Berpartisipasi aktif dalam kelompok belajar yang
+                        didedikasikan untuk eksplorasi dan pembelajaran mendalam
+                        di bidang pengembangan web, serta berbagi pengetahuan
+                        dan meningkatkan keterampilan di antara para anggotanya.
+                      </ul>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="row">
+              <div class="col-auto text-center flex-column d-none d-lg-flex">
+                <div class="row h-50">
+                  <div class="col border-end">&nbsp;</div>
+                  <div class="col">&nbsp;</div>
+                </div>
+                <h5 class="m-2">
+                  <i class="bi bi-people-fill"></i>
+                </h5>
+              </div>
+              <div class="col py-2">
+                <div class="card">
+                  <div class="card-body">
+                    <div class="float-end">Oktober 2022 - Oktober 2023</div>
+                    <h4 class="card-title">Informatics Lab Telkomuniversity</h4>
+                    <h5 class="card-subtitle">Asisten Praktikum</h5>
+                    <div class="card-text">
+                      <ul>
+                        <li>
+                          Memberikan materi teori dan pelatihan praktikum untuk
+                          memastikan peserta praktikum memiliki pemahaman yang
+                          mendalam dan penerapan langsung dari konsep yang
+                          diajarkan.
+                        </li>
+                        <li>
+                          Membantu peserta praktikum dalam menyelesaikan
+                          soal-soal latihan dengan memberikan saran dan
+                          bimbingan.
+                        </li>
+                        <li>
+                          Memeriksa dan mengoreksi hasil pengerjaan soal-soal
+                          latihan peserta praktikum.
+                        </li>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </mat-tab>
+    <mat-tab label="Pendidikan">
+      <div class="container">
+        <div class="col p-0 overflow-auto border-end">
+          <div class="p-3">
+            <div class="row">
+              <div class="col-auto text-center flex-column d-none d-lg-flex">
+                <div class="row h-50">
+                  <div class="col">&nbsp;</div>
+                  <div class="col">&nbsp;</div>
+                </div>
+                <h5 class="m-2">
+                  <i class="bi bi-mortarboard-fill"></i>
+                </h5>
+                <div class="row h-50">
+                  <div class="col border-end">&nbsp;</div>
+                  <div class="col">&nbsp;</div>
+                </div>
+              </div>
+              <div class="col py-2">
+                <div class="card">
+                  <div class="card-body">
+                    <div class="float-end">Agustus 2020 - Februari 2024</div>
+                    <h4 class="card-title">Universitas Telkom</h4>
+                    <h5 class="card-subtitle">S1 Teknologi Informasi</h5>
+                    <div class="card-text">
+                      Cumlaude IPK 3.86/4.00
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="row">
+              <div class="col-auto text-center flex-column d-none d-lg-flex">
+                <div class="row h-50">
+                  <div class="col border-end">&nbsp;</div>
+                  <div class="col">&nbsp;</div>
+                </div>
+                <h5 class="m-2">
+                  <i class="bi bi-bag-fill"></i>
+                </h5>
+              </div>
+              <div class="col py-2">
+                <div class="card">
+                  <div class="card-body">
+                    <div class="float-end">Januari 2018 - Januari 2019</div>
+                    <h4 class="card-title">LBPP LIA</h4>
+                    <h5 class="card-subtitle">Intermediate Level</h5>
+                    <div class="card-text">
+                      <ul></ul>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </mat-tab>
+  </mat-tab-group>
+</div>
