--- a/src/app/components/list-project/list-project.component.html
+++ b/src/app/components/list-project/list-project.component.html
@@ -12,7 +12,7 @@
             Publikasi jurnal  berindeks Sinta 2 dengan judul <i>Website quality analysis using modified webqual method and importance performance analysis on SITU TAK website</i>
           </p>
           <div class="text-end">
-            <a href="https://doi.org/10.22219/kinetik.v9i1.1866" class="btn btn-primary">Lihat Publikasi</a>
+            <a href="https://doi.org/10.22219/kinetik.v9i1.1866" class="btn">Lihat Publikasi</a>
           </div>
         </div>
       </div>
@@ -29,7 +29,7 @@
             UMKM, serta menunjukan menu makanan yang ada di UMKM tersebut.
           </p>
           <div class="text-end">
-            <a href="https://buburayamkangdeddystrawberry.my.id/" class="btn btn-primary">Lihat Website</a>
+            <a href="https://buburayamkangdeddystrawberry.my.id/" class="btn">Lihat Website</a>
           </div>
         </div>
       </div>
