--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,5 +1,10 @@
 <div class="container text-center h-200">
   <div class="row">
+    <div class="col position-relative">
+      <div class="mx-auto">
+        <img src="../../../assets/img/myself.png" height="400px" alt="" />
+      </div>
+    </div>
     <div class="col text-start my-auto">
       <!-- <h1>Hi I'm</h1> -->
       <h1>Rafli Purnama Putra</h1>
@@ -14,25 +19,23 @@
         melakukan pengujian aplikasi secara menyeluruh serta melaporkan bug
       </p>
       <div class="d-flex justify-content-center">
-        <button
-          type="button"
-          class="btn btn-primary btn-lg rounded-4 text-center animate__animated animate__tada animate__infinite animate__slower mx-3"
-        >
-          Curiculum Vitae Bahasa
-        </button>
-        <button
-          type="button"
-          class="btn btn-primary btn-lg rounded-4 text-center animate__animated animate__tada animate__infinite animate__slower mx-3"
-        >
-          Curiculum Vitae English
-        </button>
-      </div>
-    </div>
-    <div class="col position-relative">
-      <div class="profile mx-auto my-3">
-        <img src="../../../assets/img/myself.png" height="400px" alt="" />
+        <a href="../../../assets/file/CV_Rafli Purnama Putra_BahasaIndonesia.pdf" download="CV_Rafli Purnama Putra_BahasaIndonesia.pdf">
+          <button
+            type="button"
+            class="btn btn-bahasa rounded-4 text-center animate__animated animate__tada animate__infinite animate__slower mx-3"
+          >
+            Curiculum Vitae Bahasa
+          </button>
+        </a>
+        <a href="../../../assets/file/CV_Rafli Purnama Putra_BahasaInggris.pdf" download="CV_Rafli Purnama Putra_BahasaInggris.pdf">
+          <button
+            type="button"
+            class="btn btn-eng rounded-4 text-center animate__animated animate__tada animate__infinite animate__slower mx-3"
+          >
+            Curiculum Vitae English
+          </button>
+        </a>
       </div>
     </div>
   </div>
-  <hr />
 </div>
