--- a/src/app/components/keluhan/keluhan.component.css
+++ b/src/app/components/keluhan/keluhan.component.css
@@ -8,3 +8,75 @@
 #delete:hover{
   color: red;
 }
+
+.table{
+  background-color: #000;
+}
+
+h1,h2,h3,h4,h5,h6,p,ul,li,div{
+  color: #fff;
+}
+
+.btn-add{
+  background-color: #9DB2BF;
+}
+
+.btn-submit{
+  background-color: #9DB2BF;
+  float: inline-end;
+}
+
+.btn-add:hover{
+  background-color: #616f77;
+}
+
+.btn-submit:hover{
+  background-color: #9DB2BF;
+}
+
+.btn-delete{
+  color: #fff;
+}
+
+.modal-content{
+  background-color: #526D82;
+}
+
+table {
+  border-collapse: separate !important;
+  border-spacing: 0 !important;
+}
+table tr th,
+table tr td {
+  border-right: 1px solid #fff !important;
+  border-bottom: 1px solid #fff !important;
+  background-color: #526D82;
+  color: #fff;
+}
+table tr th:first-child,
+table tr td:first-child {
+  border-left: 1px solid #fff !important;
+}
+table tr th {
+  border-top: 1px solid #fff !important;
+}
+
+/* top-left border-radius */
+table tr:first-child th:first-child {
+  border-top-left-radius: 0.25rem !important;
+}
+
+/* top-right border-radius */
+table tr:first-child th:last-child {
+  border-top-right-radius: 0.25rem !important;
+}
+
+/* bottom-left border-radius */
+table tr:last-child td:first-child {
+  border-bottom-left-radius: 0.25rem !important;
+}
+
+/* bottom-right border-radius */
+table tr:last-child td:last-child {
+  border-bottom-right-radius: 0.25rem !important;
+}
