--- a/src/app/components/keluhan/keluhan.component.html
+++ b/src/app/components/keluhan/keluhan.component.html
@@ -1,6 +1,6 @@
-<div class="container float-sm-start">
+<div class="container">
   <h1 class="text-center mb-3">Saran</h1>
-  <div class="d-flex justify-content-end mb-3"><button type="button" class="btn btn-outline-primary justify-content-end"
+  <div class="d-flex justify-content-end mb-3"><button type="button" class="btn btn-add justify-content-end"
       data-bs-toggle="modal" data-bs-target="#addKeluh">Tambahkan Saran</button></div>
   <div class="modal fade" id="addKeluh" tabindex="-1" aria-labelledby="addKeluhLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered">
@@ -17,33 +17,29 @@
                 [(ngModel)]="form.name">
             </div>
             <div class="mb-3">
-              <label for="keluhKesah" class="form-label">Keluh Kesah</label>
+              <label for="keluhKesah" class="form-label">Saran</label>
               <textarea class="form-control" name="keluhKesah" placeholder="Masukkan Keluhan Anda..." rows="3"
                 [(ngModel)]="form.keluhan"></textarea>
             </div>
-            <button class="btn btn-primary">Submit</button>
+            <button class="btn btn-submit">Submit</button>
           </form>
         </div>
       </div>
     </div>
   </div>
 
-  <table class="table table-bordered mx-auto">
-    <thead class="bg-primary text-white">
+  <table class="table table-saran table-bordered mx-auto">
+    <thead class="text-white">
       <tr>
         <th class="text-center" *ngFor="let col of columnTable">{{col}}</th>
       </tr>
     </thead>
     <tbody>
       <tr *ngFor="let data of dataKeluhan | paginate: { itemsPerPage: 5, currentPage: page, totalItems:totalLength };">
-        <td>{{data.name}}</td>
-        <td>{{data.keluhan}}</td>
-        <td class="d-flex">
-          <!-- <button id="love" class="btn btn m-1 w-100" (click)="addLike(data.like)">
-            <i class="bi bi-heart"></i>
-            <p class="m-0">{{data.like}}</p>
-          </button> -->
-          <button id="delete" class="btn btn m-1" (click)="deleteData(data.id)">
+        <td style="width: 10%;">{{data.name}}</td>
+        <td style="width: 80%;">{{data.keluhan}}</td>
+        <td style="width: 5%;">
+          <button id="delete" class="btn btn-delete m-1" (click)="deleteData(data.id)">
             <i class="bi bi-trash3-fill"></i>
             <p class="m-0">Delete</p>
           </button>
@@ -58,3 +54,4 @@
 
 
 </div>
+
