--- a/src/app/components/list-project/list-project.component.css
+++ b/src/app/components/list-project/list-project.component.css
@@ -16,3 +16,21 @@
 .geeks:hover img {
   transform: scale(1.3);
 }
+
+.card{
+  transition: 0.5s;
+  background-color: #526D82;
+}
+
+h1,h2,h3,h4,h5,h6,p,ul,li,div{
+  color: #fff;
+}
+
+
+.btn{
+  background-color: #9DB2BF;
+}
+
+.btn:hover{
+  background-color: #616f77;
+}
