--- a/src/app/components/skill/skill.component.css
+++ b/src/app/components/skill/skill.component.css
@@ -1,10 +1,16 @@
 .card{
   transition: 0.5s;
+  background-color: #9DB2BF;
 }
 .card:hover{
   transform: scale(1.1);
-  background-color: rgb(0, 79, 237);
-  color: white;
+  background-color: #9DB2BF;
+  color: #000;
   margin-bottom: 10px;
   transition: 0.5s;
 }
+
+h1,h2,h3,h4,h5,h6,p,ul,li{
+  color: #fff;
+}
+
