--- a/src/app/components/experience/experience.component.html
+++ b/src/app/components/experience/experience.component.html
@@ -21,7 +21,7 @@
               <div class="col py-2">
                 <div class="card">
                   <div class="card-body">
-                    <div class="float-end">Oktober 2023 - Sekarang</div>
+                    <div class="float-md-end">Oktober 2023 - Sekarang</div>
                     <h4 class="card-title">
                       Direktorat Pusat Teknologi Informasi Telkomuniversity
                     </h4>
@@ -67,7 +67,7 @@
               <div class="col py-2">
                 <div class="card">
                   <div class="card-body">
-                    <div class="float-end">Oktober 2022 - Oktober 2023</div>
+                    <div class="float-md-end">Oktober 2022 - Oktober 2023</div>
                     <h4 class="card-title">
                       Direktorat Pusat Teknologi Informasi Telkomuniversity
                     </h4>
@@ -123,7 +123,7 @@
               <div class="col py-2">
                 <div class="card">
                   <div class="card-body">
-                    <div class="float-end">Desember 2021 - September 2022</div>
+                    <div class="float-md-end">Desember 2021 - September 2022</div>
                     <h4 class="card-title">Chevalier Lab Telkomuniversity</h4>
                     <h5 class="card-subtitle">Anggota Divisi Web</h5>
                     <div class="card-text">
@@ -152,7 +152,7 @@
               <div class="col py-2">
                 <div class="card">
                   <div class="card-body">
-                    <div class="float-end">Oktober 2022 - Oktober 2023</div>
+                    <div class="float-md-end">Oktober 2022 - Oktober 2023</div>
                     <h4 class="card-title">Informatics Lab Telkomuniversity</h4>
                     <h5 class="card-subtitle">Asisten Praktikum</h5>
                     <div class="card-text">
@@ -203,7 +203,7 @@
               <div class="col py-2">
                 <div class="card">
                   <div class="card-body">
-                    <div class="float-end">Agustus 2020 - Februari 2024</div>
+                    <div class="float-md-end">Agustus 2020 - Februari 2024</div>
                     <h4 class="card-title">Universitas Telkom</h4>
                     <h5 class="card-subtitle">S1 Teknologi Informasi</h5>
                     <div class="card-text">
@@ -227,7 +227,7 @@
               <div class="col py-2">
                 <div class="card">
                   <div class="card-body">
-                    <div class="float-end">Januari 2018 - Januari 2019</div>
+                    <div class="float-md-end">Januari 2018 - Januari 2019</div>
                     <h4 class="card-title">LBPP LIA</h4>
                     <h5 class="card-subtitle">Intermediate Level</h5>
                     <div class="card-text">
