--- a/src/app/components/list-project/list-project.component.html
+++ b/src/app/components/list-project/list-project.component.html
@@ -3,37 +3,85 @@
   <div class="row row-cols-1 row-cols-md-2 g-4">
     <div class="col">
       <div class="card">
-        <div class="card-header fw-bold fs-5 text-center">Publikasi Jurnal Sinta 2</div>
+        <div class="card-header fw-bold fs-5 text-center">Contoh Laporan Test Case</div>
         <div class="geeks">
-          <img src="../../../assets/img/publikasi.png" height="300px" class="card-img-top" alt="...">
+          <img
+            src="../../../assets/img/templateTestCase.jpg"
+            height="300px"
+            class="card-img-top"
+            alt="..."
+          />
         </div>
         <div class="card-body mx-2">
           <p class="card-text lh-sm">
-            Publikasi jurnal  berindeks Sinta 2 dengan judul <i>Website quality analysis using modified webqual method and importance performance analysis on SITU TAK website</i>
+            Template laporan test case yang biasa digunakan dalam pengujian
+            website maupun API yang membantu memudahkan proses dokumentasi dan penemuan bug/error dari
+            website tersebut.
           </p>
           <div class="text-end">
-            <a href="https://doi.org/10.22219/kinetik.v9i1.1866" class="btn">Lihat Publikasi</a>
+            <a href="https://docs.google.com/spreadsheets/d/1UjmazAZJIe9BEEPUxNEX1-fVm2ugdCapaR7Em8HABpU/edit?usp=sharing" class="btn"
+              >Lihat Lengkap</a
+            >
           </div>
         </div>
       </div>
     </div>
     <div class="col">
       <div class="card">
-        <div class="card-header fw-bold fs-5 text-center">Bubur Ayam Kang Deddy Strawberry</div>
+        <div class="card-header fw-bold fs-5 text-center">
+          Publikasi Jurnal Sinta 2
+        </div>
         <div class="geeks">
-          <img src="../../../assets/img/BuburKDS.png" height="300px" class="card-img-top" alt="...">
+          <img
+            src="../../../assets/img/publikasi.png"
+            height="300px"
+            class="card-img-top"
+            alt="..."
+          />
         </div>
         <div class="card-body mx-2">
           <p class="card-text lh-sm">
-            Website UMKM bubur ayam untuk memberikan informasi terkait UMKM, menunjukan lokasi
-            UMKM, serta menunjukan menu makanan yang ada di UMKM tersebut.
+            Publikasi jurnal berindeks Sinta 2 dengan judul
+            <i
+              >Website quality analysis using modified webqual method and
+              importance performance analysis on SITU TAK website</i
+            >.
           </p>
           <div class="text-end">
-            <a href="https://buburayamkangdeddystrawberry.my.id/" class="btn">Lihat Website</a>
+            <a href="https://doi.org/10.22219/kinetik.v9i1.1866" class="btn"
+              >Lihat Publikasi</a
+            >
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col">
+      <div class="card">
+        <div class="card-header fw-bold fs-5 text-center">
+          Bubur Ayam Kang Deddy Strawberry
+        </div>
+        <div class="geeks">
+          <img
+            src="../../../assets/img/BuburKDS.png"
+            height="300px"
+            class="card-img-top"
+            alt="..."
+          />
+        </div>
+        <div class="card-body mx-2">
+          <p class="card-text lh-sm">
+            Website UMKM bubur ayam untuk memberikan informasi terkait UMKM,
+            menunjukan lokasi UMKM, serta menunjukan menu makanan yang ada di
+            UMKM tersebut.
+          </p>
+          <div class="text-end">
+            <a href="https://buburayamkangdeddystrawberry.my.id/" class="btn"
+              >Lihat Website</a
+            >
           </div>
         </div>
       </div>
     </div>
   </div>
-  <hr>
+  <hr />
 </div>
