add new project

--- a/src/app/components/list-project/list-project.component.html
+++ b/src/app/components/list-project/list-project.component.html
@@ -3,6 +3,29 @@
   <div class="row row-cols-1 row-cols-md-2 g-4">
     <div class="col">
       <div class="card">
+        <div class="card-header fw-bold fs-5 text-center">Automation Test Katalon</div>
+        <div class="geeks">
+          <img
+            src="../../../assets/img/Katalon.png"
+            height="300px"
+            class="card-img-top"
+            alt="..."
+          />
+        </div>
+        <div class="card-body mx-2">
+          <p class="card-text lh-sm">
+            Video penjelasan singkat mengenai contoh automation test dengan test case sederhana seperti login berhasil, login gagal, dan check kesesuaian fitur pada website Jakmall.
+          </p>
+          <div class="text-end">
+            <a href="https://youtu.be/v533yk24lmc?si=HVkOrMH2pm8CErHb" class="btn"
+              >Lihat Video</a
+            >
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col">
+      <div class="card">
         <div class="card-header fw-bold fs-5 text-center">Contoh Laporan Test Case</div>
         <div class="geeks">
           <img
