add new project

--- a/src/app/components/list-project/list-project.component.html
+++ b/src/app/components/list-project/list-project.component.html
@@ -3,6 +3,29 @@
   <div class="row row-cols-1 row-cols-md-2 g-4">
     <div class="col">
       <div class="card">
+        <div class="card-header fw-bold fs-5 text-center">Automation Test Selenium Java Webdriver</div>
+        <div class="geeks">
+          <img
+            src="../../../assets/img/selenium.png"
+            height="300px"
+            class="card-img-top"
+            alt="..."
+          />
+        </div>
+        <div class="card-body mx-2">
+          <p class="card-text lh-sm">
+            Script automation testing menggunakan selenium java webdriver + cucumber BDD dari website profile PT Cartenz Technology Indonesia
+          </p>
+          <div class="text-end">
+            <a href="https://github.com/rafliprnm/Automation-testing-landing-page-cartenz-group" class="btn"
+              >Lihat Selengkapnya</a
+            >
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col">
+      <div class="card">
         <div class="card-header fw-bold fs-5 text-center">Automation Test Katalon</div>
         <div class="geeks">
           <img
