--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -22,7 +22,7 @@
         <a href="../../../assets/file/CV_Rafli Purnama Putra_BahasaIndonesia.pdf" download="CV_Rafli Purnama Putra_BahasaIndonesia.pdf">
           <button
             type="button"
-            class="btn btn-bahasa rounded-4 text-center animate__animated animate__tada animate__infinite animate__slower mx-3"
+            class="btn btn-bahasa rounded-4 text-center mx-3"
           >
             Curiculum Vitae Bahasa
           </button>
@@ -30,11 +30,22 @@
         <a href="../../../assets/file/CV_Rafli Purnama Putra_BahasaInggris.pdf" download="CV_Rafli Purnama Putra_BahasaInggris.pdf">
           <button
             type="button"
-            class="btn btn-eng rounded-4 text-center animate__animated animate__tada animate__infinite animate__slower mx-3"
+            class="btn btn-eng rounded-4 text-center mx-3"
           >
             Curiculum Vitae English
           </button>
         </a>
+      </div>
+      <div class="d-flex justify-content-center mt-3">
+        <a href="https://github.com/rafliprnm">
+          <button
+            type="button"
+            class="btn btn-bahasa rounded-4 text-center mx-3"
+          >
+            <img src="../../../assets/img/github.png" alt="" height="30"><b>Github</b>
+          </button>
+        </a>
+
       </div>
     </div>
   </div>
